--- a/intro.qmd
+++ b/intro.qmd
@@ -4,6 +4,9 @@ This is a book created from markdown and executable code.
 
 See @knuth84 for additional discussion of literate programming.
 
+This is a test
+
 ```{r}
-1 + 1
+x <- rnorm(100)
+hist(x)
 ```
