--- a/intro.qmd
+++ b/intro.qmd
@@ -1,5 +1,15 @@
 # Introduction
 
+```{r}
+#| label: intro_setup
+#| echo: false
+#| message: false
+#| warning: false
+
+library(ggplot2)
+
+```
+
 This is a book created from markdown and executable code.
 
 See @knuth84 for additional discussion of literate programming.
@@ -8,5 +18,6 @@ This is a test
 
 ```{r}
 x <- rnorm(100)
-hist(x)
+ggplot() +
+  geom_histogram(aes(x), colour = "steelblue")
 ```
