Adding global execute options

--- a/summary.qmd
+++ b/summary.qmd
@@ -3,8 +3,6 @@
 ```{r}
 #| label: summary_setup
 #| echo: false
-#| message: false
-#| warning: false
 
 library(ggplot2)
 
@@ -13,6 +11,7 @@ library(ggplot2)
 In summary, this book has no content whatsoever.
 
 ```{r}
+#| fig-align: center
 ggplot(data = iris,
        aes(x = Sepal.Length, 
            y = Sepal.Width,
